--- a/locales/it.json
+++ b/locales/it.json
@@ -1,14 +1,14 @@
 {
 	"FORM_ERROR_MISSING_EMAIL": "Devi indicare un indirizzo email",
 	"FORM_ERROR_INVALID_EMAIL": "La mail non è valida",
-	"FORM_ERROR_FIRST_NAME_TOO_SHORT": "Il tuo nome deve contenere al meno %s lettere",
-	"FORM_ERROR_FIRST_NAME_TOO_LONG": "Il tuo nome deve contenere meno di %s lettere",
-	"FORM_ERROR_FIRST_NAME_MISSING": "Devi indicare il tuo nome",
-	"FORM_ERROR_LAST_NAME_TOO_SHORT": "Il tuo cognome deve contenere al meno %s lettere",
-	"FORM_ERROR_LAST_NAME_TOO_LONG": "Il tuo cognome deve contenere meno di %s lettere",
-    "FORM_ERROR_PASSWORD_TOO_SHORT": "La tua password deve contenere al meno %s caratteri",
-	"FORM_ERROR_PASSWORD_TOO_LONG": "La tua password deve contenere meno di %s caratteri",
-	"FORM_ERROR_LAST_NAME_MISSING": "Devi indicare il tuo cognome",
+	"FORM_ERROR_FIRST_NAME_TOO_SHORT": "Il nome deve contenere al meno %s lettere",
+	"FORM_ERROR_FIRST_NAME_TOO_LONG": "Il nome deve contenere meno di %s lettere",
+	"FORM_ERROR_FIRST_NAME_MISSING": "Devi indicare il nome",
+	"FORM_ERROR_LAST_NAME_TOO_SHORT": "Il cognome deve contenere al meno %s lettere",
+	"FORM_ERROR_LAST_NAME_TOO_LONG": "Il cognome deve contenere meno di %s lettere",
+	"FORM_ERROR_PASSWORD_TOO_SHORT": "La password deve contenere al meno %s caratteri",
+	"FORM_ERROR_PASSWORD_TOO_LONG": "La password deve contenere meno di %s caratteri",
+	"FORM_ERROR_LAST_NAME_MISSING": "Devi indicare il cognome",
 	"FORM_ERROR_EMAIL_IN_USE": "Questa email è già registrata",
 	"FORM_ERROR_INVALID_PASSWORD": "Password non valida.",
 	"WRONG_CREDENTIALS": "Le credenziali di accesso non sono valide.",
@@ -20,8 +20,9 @@
 	"USED_RESET_ID_TITLE": "Richiesta già utilizzata",
 	"USED_RESET_ID": "Questa richiesta di recupero password è stata già utilizzata.",
 	"VALID_RESET_TITLE": "Recupero password autorizzato",
-	"VALID_RESET": "Ti abbiamo appena inviato una mail a <strong>%s</strong> con la tua nuova password.",
+	"VALID_RESET": "Ti abbiamo appena inviato una mail a <strong>%s</strong> con la nuova password.",
 	"UNAUTHORISED_API_CALL": "UNAUTHORISED_API_CALL",
-    "TOO_MANY_REQUESTS": "Troppe richieste, si prega di riprovare %s.",
-	"WRONG_CURRENT_PASSWORD": "Non coincide con la password corrente"
+	"TOO_MANY_REQUESTS": "Troppe richieste, si prega di riprovare %s.",
+	"WRONG_CURRENT_PASSWORD": "Non coincide con la password corrente",
+	"FORM_ERROR_JAIL_MISSING": "FORM_ERROR_JAIL_MISSING"
 }
