User address support

--- a/locales/it.json
+++ b/locales/it.json
@@ -24,5 +24,11 @@
 	"UNAUTHORISED_API_CALL": "UNAUTHORISED_API_CALL",
 	"TOO_MANY_REQUESTS": "Troppe richieste, si prega di riprovare %s.",
 	"WRONG_CURRENT_PASSWORD": "Non coincide con la password corrente",
-	"FORM_ERROR_JAIL_MISSING": "FORM_ERROR_JAIL_MISSING"
+	"FORM_ERROR_JAIL_MISSING": "FORM_ERROR_JAIL_MISSING",
+	"FORM_ERROR_ADDRESS_TOO_SHORT": "FORM_ERROR_ADDRESS_STREET_TOO_SHORT",
+	"FORM_ERROR_ADDRESS_TOO_LONG": "FORM_ERROR_ADDRESS_STREET_TOO_LONG",
+	"FORM_ERROR_ADDRESS_REGION_TOO_SHORT": "FORM_ERROR_ADDRESS_REGION_TOO_SHORT",
+	"FORM_ERROR_ADDRESS_REGION_TOO_LONG": "FORM_ERROR_ADDRESS_REGION_TOO_LONG",
+	"FORM_ERROR_ADDRESS_CODE_TOO_SHORT": "FORM_ERROR_ADDRESS_CODE_TOO_SHORT",
+	"FORM_ERROR_ADDRESS_CODE_TOO_LONG": "FORM_ERROR_ADDRESS_CODE_TOO_LONG"
 }
