--- a/locales/it.json
+++ b/locales/it.json
@@ -30,5 +30,12 @@
 	"FORM_ERROR_ADDRESS_REGION_TOO_SHORT": "FORM_ERROR_ADDRESS_REGION_TOO_SHORT",
 	"FORM_ERROR_ADDRESS_REGION_TOO_LONG": "FORM_ERROR_ADDRESS_REGION_TOO_LONG",
 	"FORM_ERROR_ADDRESS_CODE_TOO_SHORT": "FORM_ERROR_ADDRESS_CODE_TOO_SHORT",
-	"FORM_ERROR_ADDRESS_CODE_TOO_LONG": "FORM_ERROR_ADDRESS_CODE_TOO_LONG"
+	"FORM_ERROR_ADDRESS_CODE_TOO_LONG": "FORM_ERROR_ADDRESS_CODE_TOO_LONG",
+	"FILE_FORMAT_INCORRECT": "FILE_FORMAT_INCORRECT",
+	"URL_TOO_SHORT": "URL_TOO_SHORT",
+	"URL_TOO_LONG": "URL_TOO_LONG",
+	"BODY_MISSING": "BODY_MISSING",
+	"SUBJECT_TOO_LONG": "SUBJECT_TOO_LONG",
+	"BODY_TOO_SHORT": "BODY_TOO_SHORT",
+	"BODY_TOO_LONG": "BODY_TOO_LONG"
 }
